--- a/aaryan/index.html
+++ b/aaryan/index.html
@@ -123,7 +123,7 @@
                                     <div class="slid_item">
                                         <div class="home_text ">
                                             <header id="header" class="alt">
-                                                <h1 class="text-yellow">Welcome to my Web page</h1>
+                                                <h1 class="text-yellow">Welcome to "Aaryan's" world.</h1>
                                                   
                                         </div>
                                     </div><!-- End off slid item -->
