--- a/aaryan/index.html
+++ b/aaryan/index.html
@@ -479,7 +479,9 @@
                                         <div class="item_icon"><i class="fa fa-envelope-o"></i></div>
                                         <div class="widget_ab_item_text">
                                             <h6 class="text-white">Email Address :</h6>
-                                            <p><strong>aaryanzh809@gmail.com</strong></p>
+                                            <p><strong>aaryanzh809@gmail.com</strong></p><br>
+                                            <h6 class="text-white">My Sister's Webpage:</h6>
+                                            <a href="https://jyothisankalp.github.io/priyanshi/">View it</a>
                                         </div>
                                     </div>
                                 </div><!-- End off widget item -->
