--- a/aaryan/index.html
+++ b/aaryan/index.html
@@ -4,6 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
     <head>
+        <meta name="google-site-verification" content="jAwYkBN4eHU8K6L9s7uAL-KTe2b9OH35DXsffb7ozXE" />
         <meta charset="utf-8">
         <title>AARYAN</title>
         <meta name="description" content="">
