--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 <title>Aaryan's Web page!</title>
 <body>
-<bg color="red"><font="Jokerman">
-<a href="https://jyothisankalp.github.io/aaryan/">Visit my web page</a>
+<bg color="red"><font="Jokerman>
+  <h1>
+  <p>Hello!</p>
+<a href="https://jyothisankalp.github.io/aaryan/">Visit my web page</a><br>
 <a href="https://jyothisankalp.github.io/priyanshi/">Visit my sister's Web page</a>
+  </h1>
 </body>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168632334-1"></script>
