--- a/aaryan/index.html
+++ b/aaryan/index.html
@@ -282,7 +282,7 @@
                                 <div class="teams_item text-right sm-m-top-50">
                                     <div class="row">
                                         <div class="col-sm-4">
-                                            <img src="assets/images/team.jpg" alt="" class="img-circle" />
+                                            <img src="assets/images/team.jpg" alt="" class="img-square" />
                                             </div><!-- End off col-md-4 -->
                                         </div><!-- End off col-md-4 -->
                                     </div>
