--- a/aaryan/index.html
+++ b/aaryan/index.html
@@ -441,7 +441,7 @@
                                 </div><!-- End off grid item -->
 
                                 <div class="grid-item alkali ar" >
-                                    <img alt="" src="assets/images/qtpi.png">
+                                    <img alt="" src="assets/images/unity1.jpg">
                                     <div class="grid_hover_area text-center">
                                         <div class="girid_hover_text m-top-50">
                                             <a href="https://www.qtpi.in/" class="btn btn-primary popup-img">View Project</a>
